API-282: Add Employment Status Field to Application Models (#643)
An employment_status field has been added to the Application database model. The possible employment statuses are employed, unemployed, and self-employed.
