# api/massgov/pfml/db/models/applications.py
@@ -8,6 +8,16 @@ from ..lookup import LookupTable
 from .base import Base, uuid_gen
 
 
+class LkEmploymentStatus(Base):
+    __tablename__ = "lk_employment_status"
+    employment_status_id = Column(Integer, primary_key=True, autoincrement=True)
+    employment_status_description = Column(Text)
+
+    def __init__(self, employment_status_id, employment_status_description):
+        self.employment_status_id = employment_status_id
+        self.employment_status_description = employment_status_description
+
+
 class LkLeaveReason(Base):
     __tablename__ = "lk_leave_reason"
     leave_reason_id = Column(Integer, primary_key=True, autoincrement=True)
@@ -82,6 +92,7 @@ class Application(Base):
     leave_reason_qualifier_id = Column(
         Integer, ForeignKey("lk_leave_reason_qualifier.leave_reason_qualifier_id")
     )
+    employment_status_id = Column(Integer, ForeignKey("lk_employment_status.employment_status_id"))
     start_time = Column(DateTime)
     updated_time = Column(DateTime)
     completed_time = Column(DateTime)
@@ -96,6 +107,7 @@ class Application(Base):
     leave_type = relationship(LeaveType)
     leave_reason = relationship(LkLeaveReason)
     leave_reason_qualifier = relationship(LeaveReasonQualifier)
+    employment_status = relationship(LkEmploymentStatus)
     relationship_to_caregiver = relationship(RelationshipToCareGiver)
     relationship_qualifier = relationship(RelationshipQualifier)
     employer_notification_method = relationship(NotificationMethod)
@@ -204,7 +216,17 @@ class LeaveReason(LookupTable):
     SERIOUS_HEALTH_CONDITION_EMPLOYEE = LkLeaveReason(4, "Serious Health Condition - Employee")
 
 
+class EmploymentStatus(LookupTable):
+    model = LkEmploymentStatus
+    column_names = ("employment_status_id", "employment_status_description")
+
+    EMPLOYED = LkEmploymentStatus(1, "Employed")
+    UNEMPLOYED = LkEmploymentStatus(2, "Unemployed")
+    SELF_EMPLOYED = LkEmploymentStatus(3, "Self-Employed")
+
+
 def sync_lookup_tables(db_session):
     """Synchronize lookup tables to the database."""
     LeaveReason.sync_to_database(db_session)
+    EmploymentStatus.sync_to_database(db_session)
     db_session.commit()
